Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ stages:
   - deployment: deployprod
     displayName: prod
     environment:
-      name:  <environment name>
+      name: PROD
       resourceType: VirtualMachine
     strategy:
       runOnce:
