Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ stages:
           - task: CopyFiles@2
             inputs:
               Contents: 'vmconfig.sh'
-              TargetFolder: '$(Agent.BuildDirectory)'
+              TargetFolder: '/home/demoadmin'
           - task: Bash@3
             inputs:
               filePath: '/home/demoadmin/vmconfig.sh'
