--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,13 +19,10 @@ stages:
           - task: CopyFilesOverSSH@0
             inputs:
               sshEndpoint: 'PROD-SSH'
-              sourceFolder: '$(System.DefaultWorkingDirectory)'
-              contents: 'vmconfig.sh'
-              targetFolder: '/home/demoadmin'
+              sourceFolder: ''
+              contents: '**'
+              targetFolder: '/var/www/html'
               readyTimeout: '20000'
-          - task: Bash@3
-            inputs:
-              filePath: 'vmconfig.sh'
 
 - stage: Dev
   condition: eq(variables['build.sourceBranch'], 'refs/heads/dev')
