--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,10 @@ stages:
       runOnce:
         deploy:
           steps:
+          - task: Bash@3
+            inputs:
+              targetType: 'inline'
+              script: 'sudo apt-get install php -y'
           - task: CopyFilesOverSSH@0
             inputs:
               sshEndpoint: 'PROD-SSH'
