--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,9 @@ stages:
           - task: Bash@3
             inputs:
               targetType: 'inline'
-              script: 'sudo apt-get install php -y'
+              script: |
+                sudo apt-get install php -y
+
 
 - stage: Dev
   condition: eq(variables['build.sourceBranch'], 'refs/heads/dev')
@@ -36,7 +38,8 @@ stages:
           - task: Bash@3
             inputs:
               targetType: 'inline'
-              script: 'sudo apt-get install php -y'
+              script: |
+                sudo apt-get install php -y
 
 - stage: Deploy
   condition: eq(variables['build.sourceBranch'], 'refs/heads/infra')
