Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ stages:
         deploymentMode: 'Incremental'
 
   - deployment: deployprod
+    dependsOn: deployinfra_prod
     displayName: prod
     environment:
       name: PROD
